--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1130.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
@@ -28,7 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nice-invoice": "^1.1.8",
     "nodemailer": "^6.7.5",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.21",
     "order-id": "^2.1.2",
     "pdf-creator-node": "^2.3.4",
     "pdf-invoice": "^1.0.2",
