--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ACCESS_KEY_ID=AKIAUDUENKGM74M5NUET
 SECRET_KEY=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
 natmarts_jwtPrivateKey=jwt@PrivateKey
-mongoURI=mongodb+srv://syed55:developer@cluster0.vqo8p.mongodb.net/natmarts?retryWrites=true&w=majority
+mongoURI=mongodb+srv://syed55:developer@cluster0.vqo8p.mongodb.net/phonebay?retryWrites=true&w=majority
 AUTH_KEY=fqX6r^pPmLZ@dgtM
 STORE_ID=30611
 # mongoURI=mongodb://localhost:27017/cns
