backend code modified

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ natmarts_jwtPrivateKey=jwt@PrivateKey
 mongoURI=mongodb+srv://syed55:developer@cluster0.vqo8p.mongodb.net/phonebay?retryWrites=true&w=majority
 AUTH_KEY=fqX6r^pPmLZ@dgtM
 STORE_ID=30611
+ACCESS_TOKEN_SECRET=SECRET_KEY
+REFRESH_TOKEN_SECRET=SECRET_KEY
 # mongoURI=mongodb://localhost:27017/cns
